--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 body {
     background-color: rgb(154, 185, 185);
     text-align: center;
@@ -5,4 +9,8 @@ body {
 }
 ul{
     list-style: none;
+    margin: 20px;
+}
+li{
+    margin: 20px;
 }
